Version 1.3.0
  Enhancements:
  - Add support for IMPORT FOREIGN SCHEMA for PostgreSQL 9.5 and higher.
  Bugfixes:
  - The server crashed for the constructs like "<column> = ANY (NULL)".
    Report and patch by dreckard.
  - oracle_fdw sometimes failed to recognize the SDO_GEOMETRY data type.
    Reported by Bevan Jenkins.

Version 1.2.0, released 2015-01-03
  Enhancements:
  - Add support for a file "srid.map" to translate SRIDs between Oracle
    and PostGIS.
  - If the Oracle session has been terminated outside of a transaction,
    try to reconnect once.
    Idea by AVEN.

  Bugfixes:
  - Prepared statements with parameters can crash.
    Because of custom plans, this does not manifest until the query has been
    executed several times in PostgreSQL 9.2 and higher.
    Per report from Krzysztof Gorczyński and others.
    This bug was introduced in 1.1.0.

Version 1.1.0, released 2014-12-03
  Enhancements:
  - Add efficient support for translating between Oracle SDO_GEOMETRY and
    PostGIS geometry.  Supported geometry types are POINT, LINE, POLYGON,
    MULTIPOINT, MULTILINE and MULTIPOLYGON.
    Courtesy of Oslandia, implemented by Vincent Mora.
  - Add regression tests for improved quality.
  - Bind LOB data instead of LOB locators for INSERT and UPDATE.
    This simplifies the code and makes Oracle triggers on LOB columns
    behave as expected.

  Bugfixes:
  - Fix a bug introduced in 1.0.0 that leads to crashes when LOB columns
    are modified.
  - Fix several crashes when the foreign table has fewer or more columns
    than the Oracle table.
  - Fix a bug that caused "RETURNING <expression>" to return NULL for
    complex expressions.
  - Writing date or timestamp columns failed when DateStyle was not ISO.
  - Reading or writing negative INTERVAL DAY TO SECOND resulted in bad
    values because the string formats in PostgreSQL and Oracle differ.

Version 1.0.0, released 2014-04-08
  Enhancements: